# helen3d

./: .gitmodules  meson.build
h3dsrc/: CurveView.cpp  Dialogue.h  Dictator.cpp  Dictator.h  Frameworks.h  GLObject.h  Icosahedron.cpp  Icosahedron.h  Mesh.cpp  Mesh.h  Picture.h  Plot3D.cpp  Plot3D.h  Quad.cpp  Quad.h  RefinementLBFGS.cpp  RefinementStrategy.cpp  RefinementStrategy.h  SlipGL.cpp  SlipGL.h  SlipObjFile.cpp  SlipObjFile.h  SlipObject.cpp  SlipObject.h  Text.cpp  Text.h  mat3x3.h  shader.cpp
h3dsrc/shaders/: Blob_fsh.h  Blob_vsh.h  InkBond_fsh.h  InkBond_vsh.h  Pencil_fsh.h  fImage.h  fStructure.h  quad.fsh  quad.vsh  shShadow.h  shText.h  vImage.h  vStructure.h
libsrc/: Curve.cpp  Curve.h  CurveView.h  Frameworks.h  GLObject.cpp  GLObject.h  Mesh.cpp  Mesh.h  Plot3D.cpp  Plot3D.h  SlipGL.cpp  SlipGL.h  SlipObject.cpp  SlipObject.h  mat3x3.cpp  mat4x4.cpp
subprojects/: helencore.wrap
